# jenkins_etl

./: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  extract.py  pyproject.toml  teste.py  transform.py
data/csv/: arquivo_teste.csv
